# SW-de-gerenciamento-de-prontu-rio-eletr-nico-em-Unidade-de-Pronto-Atendimento-UPA-

./: .gitignore  README.md  login.c  struct_login.h
Prototipo_UI_LOGIN/: CMakeLists.txt
Software Engineering Documentation/Documents/: Main Document.docx
Software Engineering Documentation/Documents/UML Modeling/Class Diagram/: DCLS02 – Diagrama_classe_paciente.puml  DCLS05 – Diagrama_classe_fila_atendimento .puml  class_diagram_busca.puml  class_diagram_evolucao_prontuario.puml  class_diagram_login.puml
Software Engineering Documentation/Documents/UML Modeling/Usecase Diagram/: DUC02 – Diagrama_casos_de_uso_administrativo.puml  DUC06 – Diagrama_casos_de_uso_médico.puml  usecase_diagram_admin.puml  usecase_diagram_admnistrativo.puml  usecase_diagram_anonimização.puml  usecase_diagram_enfermeiros.puml  usecase_diagram_geral.puml  usecase_diagram_medicos.puml  usecase_diagram_tecnico _enfermagem.puml
Software Engineering Documentation/Scope documents, requirements and business rules/UML Software Modeling/: class_diagram_cadastro.puml  class_diagram_cadastro_paciente.puml  class_diagram_evolucao_prontuario.puml  class_diagram_finalizar.puml  class_diagram_general_cadastro.puml  class_diagram_login.puml
